php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20828 dba_open hang on nfs files
Submitted: 2002-12-05 09:09 UTC Modified: 2002-12-11 05:46 UTC
From: csollet at coleebris dot com Assigned: helly (profile)
Status: Closed Package: DBM/DBA related
PHP Version: 4.3.0RC2 OS: Linux 2.2.16
Private report: No CVE-ID: None
 [2002-12-05 09:09 UTC] csollet at coleebris dot com
dba_open hang when trying to open a file located on a nfs server :

test script : 
<? dba_open("E.db", "r", "db2"); ?>

with file "E.db" on a nfs server : Block

with file "E.db" on a local filesystem :  Ok

In both case, E.db.lck is created (Hey! i've used "r" not "rl" ???) and by the way, not removed.

Seems the new locking scheme start by itself, doesn't cleanup on exit and finally hang on nfs.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-12-09 12:09 UTC] helly@php.net
It is important to keep the .lck file - so that is no problem. Also database access needs to be locked - so generally locking is wanted and not having it was an error in older dba versions. I added modifier '-' to disable/skip/ignore locking (or whatever to call it).
 [2002-12-11 05:46 UTC] helly@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

The default is now locking on the database file. This is done by GDBM handler automatically and maybe other future handlers will do also. So now all handlers behave the same way when no further modifier is used.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 06 18:00:02 2026 UTC