Added open modifier '-' to skip/ignore locking. See bug #20828, #20858